# rust_on_aws

./: Cargo.toml  README.md  rust_lambda_helper.sh
src/: main.rs
