[package]
name = "rust_on_aws"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-config = "0.49.0"
aws-sdk-dynamodb = "0.19.0"
tokio = { version = "1", features = ["full"] }
lambda_runtime = "0.6.1"
serde = "^1"
serde_json = "^1"
serde_derive = "^1"
log = "^0.4"
simple_logger = "2.3.0"
uuid = { version = "1.1.2", features = ["v4"] }